# novi

./: LICENSE  README.md  pyproject.toml
src/novi/: __main__.py  constants.py  http.py  parser.py  struct.py  util.py
src/novi/parser/: __init__.py  cambridge.py
src/novi/themes/: default.ini
