[project]
name = "novi"
version = "0.1.1"
description = "A dictionary for your terminal."
authors = [
    { name = "myxi", email = "myxi@envs.net" }
]
dependencies = [
    "selectolax>=0.3.21",
    "rich>=13.7.1",
    "httpx>=0.27.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
novi = "novi.__main__:_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/novi"]
