[project]
name = "novi"
version = "0.3.1"
description = "A dictionary for your terminal."
authors = [
    { name = "myxi", email = "myxi@envs.net" }
]
dependencies = [
    "selectolax>=0.3.21",
    "requests>=2.31.0",
    "blessings>=1.7",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
novi = "novi.__main__:_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/novi"]
